--- a/app/views/professionals/new.html.erb
+++ b/app/views/professionals/new.html.erb
@@ -45,7 +45,8 @@
           <%= p.input :address,
                     label: false,
                     input_html: {value: @professional.address, data: {address_autocomplete_target: "address"}, class: "d-none"},
-                    wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
+                    wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}},
+                    required: true
                   %>
         </div>
       </div>
