--- a/app/views/professionals/_appointment_details.html.erb
+++ b/app/views/professionals/_appointment_details.html.erb
@@ -31,7 +31,7 @@
           <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/Design%20sans%20titre%20(1).jpg", alt:"photo_pet_default", style:"width: 100px; aspect-ratio:1; border-radius: 20px; object-fit: cover;")%>
         <% end %>
         <% if @professional.specialty=="Vétérinaire"%>
-          <a href="<%=pet_show_for_pro_path(@appointment.pet_id)%>" target="_blank">Voir le carnet de santé</a>
+          <a href="<%=professional_pet_show_for_pro_path(professional_id: @professional.id, id: @appointment.pet_id)%>" target="_blank">Voir le carnet de santé</a>
         <%end%>
       </div>
     </div>
