--- a/app/views/pages/_description_home.html.erb
+++ b/app/views/pages/_description_home.html.erb
@@ -8,12 +8,12 @@
       <div class="shine-effect2">
 
       </div>
-      <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//tamas-pap-Qdt8f7Tcle0-unsplash-removebg-preview.png", class: "main-image", alt: "Woman hugging a brown dog" %>
+      <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//tamas-pap-Qdt8f7Tcle0-unsplash-removebg-preview.webp", class: "main-image", alt: "Woman hugging a brown dog" %>
     </div>
 
     <div class="text-section">
 
-<%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//vecteezy_diving-dog-silhouette-isolated-on-a-white-background_50601513.jpg", class: "main-image", alt: "Woman hugging a brown dog", style: "width: 30%"%>
+<%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//vecteezy_diving-dog-silhouette-isolated-on-a-white-background_50601513.webp", class: "main-image", alt: "Woman hugging a brown dog", style: "width: 30%"%>
 
 
       <h2 class="title">
