--- a/app/views/pages/_pet_alert.html.erb
+++ b/app/views/pages/_pet_alert.html.erb
@@ -23,7 +23,7 @@
                       <% if alert.photo.present? %>
                         <%= image_tag(alert.photo_url, alt: "photo of pet alert", class: "info-image") %>
                       <% else %>
-                        <%= image_tag("https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/question%20(3).png", alt: "pet alert default", class: "info-image") %>
+                        <%= image_tag("https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//question.webp", alt: "pet alert default", class: "info-image") %>
                       <% end %>
 
                       <div class="carousel-caption">
