--- a/app/views/pages/_service_categories.html.erb
+++ b/app/views/pages/_service_categories.html.erb
@@ -8,7 +8,7 @@
       <div class="category-circles" id="categoryContainer">
         <a href="<%=professionals_path%>" class="category-item">
           <div class="circle-image">
-            <%= image_tag "#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/vitaly-gariev-HURf5iUtSQg-unsplash.jpg", alt: "Tous nos services" %>
+            <%= image_tag "https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//petsitteur.webp", alt: "Tous nos services" %>
           </div>
           <span class="category-name">TOUS NOS SERVICES</span>
         </a>
