--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -32,7 +32,7 @@
 <div class="container-all">
   <% if @professionals.empty?%>
     <div class="d-flex flex-column justify-content-center align-items-center">
-      <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//business-solution-removebg-preview.png" alt="not found" >
+      <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//business-solution-removebg-preview.webp" alt="not found" >
       <p class="text-center">Nous n'avons pas encore de professionnels qui correspondent à vos recherches.</p>
     </div>
   <% else %>
