--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -97,7 +97,7 @@
               <% if @reviews.empty? %>
                 <div class="d-flex flex-column justify-content-center align-items-center", style="width: 24%;">
                   <p class="text-center">Soyez le premier à mettre un avis !</p>
-                  <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/customer-feedback.png"
+                  <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//customer-feedback.webp"
                 style="height: 100px">
                 </div>
               <% else %>
