--- a/app/views/pet_alerts/_info_window.html.erb
+++ b/app/views/pet_alerts/_info_window.html.erb
@@ -3,7 +3,7 @@
     <% if pet_alert.photo.present?%>
       <%= image_tag pet_alert.photo_url, crop: :cover, width: 100%>
     <% else %>
-      <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/question.png",
+      <%= image_tag("https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//question.webp",
                     alt:"alert photo default",
                     crop: :fill,
                     width: 100)%>
