--- a/app/views/pet_alerts/index.html.erb
+++ b/app/views/pet_alerts/index.html.erb
@@ -43,7 +43,7 @@
                 <% if animal.photo.present?%>
                   <%= image_tag(animal.photo_url, style: "width: 100%; height: 100%; object-fit: cover;") %>
                 <% else %>
-                  <%= image_tag("#{ENV['SUPABASE_URL']}/storage/v1/object/public/general_images/question.png",alt:"alert photo default", style: "width: 100%; height: 100%; object-fit: cover;" )%>
+                  <%= image_tag("https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images//question.webp",alt:"alert photo default", style: "width: 100%; height: 100%; object-fit: cover;" )%>
                 <% end %>
               </div>
             </div>
